<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/st_3"
    android:animateLayoutChanges="true">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f1_hover"
        android:id="@+id/f1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="15dp"
        android:textColor="#ffffffff" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f2_pause"
        android:id="@+id/f2"
        android:layout_below="@+id/f1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textColor="#ffffffff" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mistake"
        android:max="50"
        android:indeterminate="false"
        android:progress="10"
        android:layout_below="@+id/repeating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/diapason_tmp"
        android:id="@+id/text_mist"
        android:textAlignment="center"
        android:layout_below="@+id/mistake"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accentColor" />

        <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f3_bass"
        android:id="@+id/autostarting"
            android:layout_below="@+id/f2"
            android:layout_alignRight="@+id/f1"
            android:layout_alignEnd="@+id/f1"
            android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff"
        android:visibility="visible"
        android:checked="false" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repeating"
        android:textColor="#ffffffff"
        android:visibility="visible"
        android:checked="false"
        android:text="@string/f4_style"
        android:layout_below="@+id/autostarting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_songs"
            android:id="@+id/manual"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below
                ="@+id/text_mist"
            android:layout_marginTop="110dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_mood"
            android:id="@+id/clear"
            android:layout_below="@+id/text_mist"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:id="@+id/fn5_eng"
            android:checked="false"
            android:layout_below="@+id/fn6_upd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_update"
            android:id="@+id/fn6_upd"
            android:layout_below="@+id/repeating"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

    </RelativeLayout>
</ScrollView>


</RelativeLayout>
